--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "git-commit-msg-linter": "^3.0.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
