--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Caique Pimenta <cpimenta.apsoftware@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.8",
     "git-commit-msg-linter": "^3.0.0"
   },
   "dependencies": {
