--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.8",
-    "git-commit-msg-linter": "^3.0.0"
+    "git-commit-msg-linter": "^3.0.0",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "express": "^4.17.1"
