--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Caique Pimenta <cpimenta.apsoftware@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev":"ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
@@ -15,6 +15,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite3": "^5.0.0",
+    "typeorm": "^0.2.28"
   }
 }
