--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/multer": "^1.4.4",
+    "@types/yup": "^0.29.8",
     "git-commit-msg-linter": "^3.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
