--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^6.6.1",
     "multer": "^1.4.2",
     "sqlite3": "^5.0.0",
     "typeorm": "^0.2.28",
