--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",    
+    "test": "jest"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.19",
     "@types/multer": "^1.4.4",
+    "@types/supertest": "^2.0.10",
     "@types/yup": "^0.29.8",
     "git-commit-msg-linter": "^3.0.0",
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
   },
